<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitnesLife</string>
    <string name="title_register">Registrarse</string>
    <string name="title_name">Introduce tu nombre:</string>
    <string name="title_email">Introduce tu email</string>
    <string name="title_passwordVeri">Introduce tu contraseña</string>
    <string name="title_password">Crea una contraseña:</string>
    <string name="title_rptPassword">Repetir contraseña:</string>
    <string name="title_logIn">Iniciar sesión</string>
    <string name="other">Or</string>
    <string name="hint_input">"esto es un texto editable</string>
    <string name="home_welcome">Bienvenido!</string>
    <string name="home_title">Comienza tu camino en la vida fitnes</string>
    <string name="title_card1_home">Explorar</string>
    <string name="paragraph_card1_home">Explora los diferentes ejercicios para cada parte muscular</string>
    <string name="title_card2_home">Entrenamientos</string>
    <string name="paragraph_card2_home">Crea tu propia rutina de entrenamientos</string>
    <string name="text_card1">Explora los ejercicios para  cada nivel. </string>
    <string name="text_card2">Crear rutina</string>
    <string name="Button_card1">Ver más</string>
    <string name="Button_card2">Empezar</string>

    <string name="titleRutinas">Rutinas</string>
    <string name="subRutinas">Aquí puedes elegir o crear</string>
    <string name="subRutinas2">una rutina personalizada</string>
    <string name="titlePrin">Principiante</string>
    <string name="titlePrin2">Rutinas recomendadas para principiantes.</string>
    <string name="titleInter">Intermedio</string>
    <string name="titleInter2">Rutina para personas que práctican ejercicio frecuentemente.</string>
    <string name="titleAvan">Avanzado</string>
    <string name="titleAvan2">Perfecto para personas con varios años de entrenamiento y experiencia.</string>
    <string name="titlePer">Personalizada</string>
    <string name="titlePer2">Aquí puedes realizar rutinas a tus gustos y preferencias.</string>

    <string name="menuInicio">Inicio</string>
    <string name="menuRutinas">Rutinas</string>
    <string name="menuEjercicios">Ejercicios</string>
    <string name="menuCuerpo">Cuerpo</string>
    <string name="menuConfiguracion">Configuracion</string>
    <string name="menuCuenta">Cuenta</string>
    <string name="name_user">Harry Hernández</string>
    <string name="imgInText">img user</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="titleAlerts">Ups!, ha ocurrido un error</string>
    <string name="btnConfirmar">Ok</string>

    <string name="completeCampos">No hay registro con ese correo</string>
    <string name="contaseñaIncorrecta">Contraseña Incorrecta</string>
    <string name="notFound">No hay una cuenta con ese correo</string>
    <string name="yesFound">Ya hay una cuenta con ese correo</string>
    <string name="contraseñaNoCoincide">Las contraseñas no coinciden</string>
    <string name="contraseñaCorta">La contraseña debe tener por lo menos 6 caracteres</string>
    <string name="resuelva">Debe llenar todos los campos</string>
    <string name="exito">Su registro fué exitoso</string>

    <string name="cerrandoCiclo">Cerrar Sesión</string>
    <string name="cardio">Cardio</string>
    <string name="ejercicio">Ejercicios</string>
    <string name="rutina">Rutinas</string>
    <string name="body">Cuerpo</string>


    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Salir</string>

    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="descripcion_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Peso normal</string>
    <string name="descripcion_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="descripcion_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="descripcion_obesidad">Estás muy por encima de lo óptimo para tu peso y altura.</string>

    <string name="nombre">Usuario</string>
    <string name="correo">Correo</string>
    <string name="imc">IMC</string>

    <string name="actualizar">Actualizar</string>
    <string name="cancelar">Cancelar</string>

    <string name="todoBien">Todo está correcto, digo yoo...</string>

    <string name="titleAlertsSuce">Operación exitosa</string>

    <string name="Personalizado">Tus rutinas perosonalizadas</string>

    <string name="titleDialogRutina">Crea tu nueva rutina</string>
    <string name="titleEtRutina">Nombre de tu rutina</string>
    <string name="titleBtnRutina">Crear rutina</string>

    <string name="rutinasPersonalizadas">Tus rutinas personalizada</string>

    <string name="dataExist">Ya ha agregado este ejercicio</string>

    <string name="eliminar">Eliminar</string>

    <string name="sesuroseguro">¿Estás seguro de querer eliminar el ejercicio?</string>

    <string name="AppName">FitnesLife</string>

    <string name="confirmLog">¿Estás seguro de cerrar sesión?</string>
    <string name="StartRutina">Comenzar Entrenamiento</string>
    <string name="StopRutina">Reanudar Rutina</string>
    <string name="image1">Comienza a entrenar tu cuerpo</string>
    <string name="image2">Empieza con barra o mancuernas</string>
    <string name="image3">Encuentra las mejores rutinas para ti</string>
    
    
    <string name="Pecho">Pecho</string>
    <string name="Espalda">Espalda</string>
    <string name="Pierna">Pierna</string>
    <string name="Abdomen">Abdomen</string>
    <string name="textBuscador">Encuentra El ejercicio Ideal Para Ti</string>
    <string name="dialogoFinalizar">¿Quieres Finalizar la rutina?</string>
    <string name="finalizarRutina">Finalizar Rutina</string>


    <string name="titleDuracion">Duración:</string>
    <string name="titleCalorias">Calorias a quemar:</string>
    <string name="titlePeso">Peso recomendado:</string>
    <string name="btnRutEmp">Empezar rutina</string>
    <string name="titleListEjer">Lista de ejercicios</string>

    <string name="titleRealizar">Ejercicios a realizar</string>
    <string name="cronometroRutina">Cronometro para la rutina</string>
    <string name="cronometroDescanso">Cronometro para descanso</string>
    <string name="endRutina">Finalizar Rutina</string>

    <string name="descripcionEjer">Descripción:</string>
    <string name="preparacionEjer">Preparacion:</string>
    <string name="ejecucionEjer">Ejecución:</string>
    <string name="detalles">Detalles:</string>
    <string name="rutinaAvanzado">Rutina Para Avanzados</string>
    <string name="rutinaIntermedio">Rutina para Intermedios</string>
    <string name="rutinaPrincipiante">Rutina para Principiantes</string>
</resources>