<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/navInicio"
            android:icon="@drawable/ic_home"
            android:title="@string/menuInicio"></item>
        <item
            android:id="@+id/navRutinas"
            android:icon="@drawable/ic_routine"
            android:title="@string/menuRutinas">

        </item>
        <item
            android:id="@+id/navEjercicios"
            android:icon="@drawable/ic_exercise"
            android:title="@string/menuEjercicios"></item>

        <item
            android:id="@+id/navCuerpo"
            android:icon="@drawable/ic_body"
            android:title="@string/menuCuerpo">

        </item>

        <item
            android:id="@+id/navCuenta"
            android:icon="@drawable/ic_person"
            android:title="@string/menuCuenta">

        </item>

    </group>

</menu>