<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleDialogRutina"
        android:textAlignment="center"
        android:textColorHint="@color/grey_components"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/background_app"
        android:hint="@string/titleEtRutina"
        android:textColor="@color/grey_low"
        android:textColorHint="@color/grey_low" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_icons"
        android:text="@string/titleBtnRutina" />


</LinearLayout>