<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity"
    android:background="@color/background_app"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/home_tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome"
        android:textSize="45sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black">
    </TextView>
    <TextView
        android:id="@+id/home_pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/home_tt"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black">
    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="0dp"
        android:layout_height="246dp"
        app:layout_constraintTop_toBottomOf="@+id/home_pp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="27dp"
        android:layout_marginVertical="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_home"
            app:layout_constraintTop_toBottomOf="@+id/home_pp">

        </ImageView>
    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/black">

    </View>
    <LinearLayout
        android:id="@+id/text_card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card1_home"
            android:textColor="@color/black"
            android:textSize="25sp">
        </TextView>
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/paragraph_card1_home"
            android:lines="2"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1_content"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/text_card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/grey_components">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_card1"
                android:textColor="@color/background_app"
                android:lines="2"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp">

            </TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="177dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            android:text="@string/Button_card1"
            android:backgroundTint="@color/orange_icons">
        </Button>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/text_card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/card1_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card2_home"
            android:textColor="@color/black"
            android:textSize="25sp">
        </TextView>
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/paragraph_card2_home"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2_content"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/text_card2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/grey_components">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_card2"
                android:textColor="@color/background_app"
                android:lines="2"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp">

            </TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="177dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp">
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            android:text="@string/Button_card2"
            android:backgroundTint="@color/orange_icons"
            >
        </Button>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>