<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLayout"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@color/grey_low"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivWar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="10dp"
        android:src="@android:drawable/ic_dialog_alert"
        app:tint="@color/orange_icons" />

    <TextView
        android:id="@+id/tvConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/sesuroseguro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="18sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/eliminar"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnConfirmacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cancelar"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>