<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/count"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".fragments.CountFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange_icons"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="normal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="4dp"
                app:cardBackgroundColor="@color/grey_low"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="10dp"
                    android:textSize="20sp"
                    tools:text="Example" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:text="@string/correo"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="normal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="4dp"
                app:cardBackgroundColor="@color/grey_low"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    tools:text="Example" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:text="@string/imc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="4dp"
                app:cardBackgroundColor="@color/grey_low"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tvImc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="Example" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnActualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/actualizar" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>